# learn-WebGPU

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  winBuild.bat
WebGPU-distribution-dawn-6512/: CMakeLists.txt
docs/: Init.md  webgpu.md
src/: main.cpp
src/engine/: application.cpp  application.h  glfw-window.cpp  glfw-window.h
src/utils/: data-structure.cpp  data-structure.h  global.cpp  global.h  utils.cpp  utils.h  webgpu-utils.cpp  webgpu-utils.h
